--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -14,7 +14,7 @@
 	\email{alonso.gonzalez@ens-lyon.fr}
 }
 
-\title{A Ring Signature of size $O(\sqrt[3]{n})$ without Random Oracles}
+\title{A Ring Signature of size $\Theta(\sqrt[3]{n})$ without Random Oracles}
 \begin{document}
 
 \maketitle
