--- a/intro/high-level.tex
+++ b/intro/high-level.tex
@@ -27,26 +27,28 @@
 %\end{pmatrix}
 %$$
 
-In our scheme the secret/verification keys of party $P$ is $(sk,\vecb{vk})$, where $\vecb{vk}=([vk],[\vecb{a}],\vecb{a}[vk])$, $(sk,[vk])$ are secret/verification keys of the Boneh-Boyen signature scheme, and $\vecb{a}\in\Z_q^2$ is chosen independently for each key from some distribution $\mathcal{Q}$ to be specified later. Suppose that $\vecb{vk}$ is the $\alpha$ th element in the ring $R=\{\vecb{vk}_{1,1,1},\ldots,\vecb{vk}_{m,m,m}\}$, where $\vecb{vk}_{i,j,k}=\vecb{vk}_{(i-1)m^2+(j-1)m+k}$ for $i,j,k\in[m],m:=\sqrt[3]{n}$. Let $i_\alpha,j_\alpha,k_\alpha\in[m]$ such that $\vecb{vk}_\alpha = \vecb{vk}_{i_\alpha,j_\alpha,k_\alpha}$. Consider the sets
+In our scheme the secret/verification keys of party $P$ is $(sk,\vecb{vk})$, where $\vecb{vk}=([vk],[\vecb{a}],\vecb{a}[vk])$, $(sk,[vk])$ are secret/verification keys of the Boneh-Boyen signature scheme, and $\vecb{a}\in\Z_q^2$ is chosen independently for each key from some distribution $\mathcal{Q}$ to be specified later. Suppose that $\vecb{vk}$ is the $\alpha$ th element in the ring $R=\{\vecb{vk}_{1},\ldots,\vecb{vk}_{n}\}$ and let $1\leq i_\alpha,j_\alpha,k_\alpha \leq m$ such that $\vecb{vk}_\alpha = \vecb{vk}_{i_\alpha,j_\alpha,k_\alpha}$, where $\vecb{vk}_{i,j,k}=\vecb{vk}_{(i-1)m^2+(j-1)m+k}$ for $1\leq  i,j,k\leq m$ and $m:=\sqrt[3]{n}$. Below we describe a $\Theta(\sqrt[3]{n})$ set-mebership-proof in $R$.
+
+Consider the sets
 \begin{align*}
-&S:=\{[\vecb{s}_1],\ldots,[\vecb{s}_{n^{2/3}}]\}:=\left\{\sum_{i\in[m]}[\vecb{a}_{i,1,1}],\ldots,\sum_{i\in[m]}[\vecb{a}_{i,m,m}]\right\}\text{ and }\\
-&S':=\{[\vecb{s}'_1],\ldots,[\vecb{s}'_{n^{2/3}}]\}:=\left\{\sum_{i\in[m]}\vecb{a}_{i,1,1}[vk_{i,1,1}],\ldots,\sum_{i\in[m]}\vecb{a}_{i,m,m}[vk_{i,m,m}]\right\}.
+&S:=\{[\vecb{s}_1],\ldots,[\vecb{s}_{n^{2/3}}]\}:=\left\{\sum_{i=1}^{m}[\vecb{a}_{i,1,1}],\ldots,\sum_{i=1}^{m}[\vecb{a}_{i,m,m}]\right\}\text{ and }\\
+&S':=\{[\vecb{s}'_1],\ldots,[\vecb{s}'_{n^{2/3}}]\}:=\left\{\sum_{i=1}^{m}\vecb{a}_{i,1,1}[vk_{i,1,1}],\ldots,\sum_{i=1}^{m}\vecb{a}_{i,m,m}[vk_{i,m,m}]\right\}.
 \end{align*}
 
 The prover commits to $[\vecb{x}]=[\vecb{s}_\mu]$ and $[\vecb{y}]=[\vecb{s}'_{\mu'}]$, for $\mu=\mu'=(j_\alpha-1)m+k_\alpha$, and shows, using (twice) the set-membership proof of Chandran et al., that $[\vecb{x}]\in S$ and that $[\vecb{y}]\in S'$.
-The prover also needs to assure that $\mu=\mu'$, which can be done reutilizing the commitment to $\mu$ (in fact to its binary representation) used in the proof that $[\vecb{x}]\in S$ in the proof that $[\vecb{y}]\in S'$. Since both sets are of size $n^{2/3}$, the two set membership proofs are of size $\Theta(\sqrt[3]{n})$.
+The prover also needs to assure that $\mu=\mu'$, which can be done reutilizing the commitment to $\mu$ (in fact to its representation as two unitary vectors of size $m$) used in the proof that $[\vecb{x}]\in S$ and in the proof that $[\vecb{y}]\in S'$. Since both sets are of size $n^{2/3}$, the two set membership proofs are of size $\Theta(\sqrt[3]{n})$.
  
-Now that the prover has committed to elements $[\vecb{x}]=\sum_{i\in[m]}[\vecb{a}_{i,j_\alpha,k_\alpha}]$ and $[\vecb{y}]=\sum_{i\in[m]}\vecb{a}_{i,j_\alpha,k_\alpha}[vk_{i,j_\alpha,k_\alpha}]$, it additionally commits to $[\kappa_1]:=[vk_{1,j_\alpha,k_\alpha}],\allowbreak\ldots,\allowbreak[\kappa_m]:=[vk_{m,j_\alpha,k_\alpha}]$ and $[\vecb{z}_1]:=[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{z}_m]:=[\vecb{a}_{m,j_\alpha,k_\alpha}]$. The prover now gives a proof that
+Now that the prover has committed to elements $[\vecb{x}]=\sum_{i=1}^{m}[\vecb{a}_{i,j_\alpha,k_\alpha}]$ and $[\vecb{y}]=\sum_{i=1}^{m}\vecb{a}_{i,j_\alpha,k_\alpha}[vk_{i,j_\alpha,k_\alpha}]$, it additionally commits to $[\kappa_1]:=[vk_{1,j_\alpha,k_\alpha}],\allowbreak\ldots,\allowbreak[\kappa_m]:=[vk_{m,j_\alpha,k_\alpha}]$ and $[\vecb{z}_1]:=[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{z}_m]:=[\vecb{a}_{m,j_\alpha,k_\alpha}]$. The prover now gives a proof that
 \begin{equation}
-\sum_{i\in[m]}[\vecb{z}_i][\kappa_i]=[\vecb{y}][1]. \label{eq:verif1}
+\sum_{i=1}^{m}[\vecb{z}_i][\kappa_i]=[\vecb{y}][1]. \label{eq:verif1}
 \end{equation}
 
-Assume for a while that $\vecb{z}_1,\ldots,\vecb{z}_m$ is a permutation of $\vecb{a}_{1,j_\alpha,k_\alpha},\ldots,\vecb{a}_{m,j_\alpha,k_\alpha}$, that is $\vecb{z}_i=\vecb{a}_{\pi(i),j_\alpha,k_\alpha}$, $i\in[m]$, for some permutation $\pi\in S_m$. Therefore, equation (\ref{eq:verif1}) implies that
+Assume for a while that $\vecb{z}_1,\ldots,\vecb{z}_m$ is a permutation of $\vecb{a}_{1,j_\alpha,k_\alpha},\ldots,\vecb{a}_{m,j_\alpha,k_\alpha}$, that is $\vecb{z}_i=\vecb{a}_{\pi(i),j_\alpha,k_\alpha}$, $1\leq i\leq m$, for some permutation $\pi\in S_m$. Therefore, equation (\ref{eq:verif1}) implies that
 \begin{align*}
-\sum_{i\in[m]}[\vecb{z}_i][\kappa_i]&=\sum_{i\in[m]}[\vecb{a}_{\pi(i),j_\alpha,k_\alpha}][\kappa_i]=\sum_{i\in[m]}[\vecb{a}_{i,j_\alpha,k_\alpha}][\kappa_{\pi^{-1}(i)}]\\
-&=\sum_{i\in[m]}[\vecb{a}_{i,j_\alpha,k_\alpha}][vk_{i,j_\alpha,k_\alpha}].
+\sum_{i=1}^{m}[\vecb{z}_i][\kappa_i]&=\sum_{i=1}^{m}[\vecb{a}_{\pi(i),j_\alpha,k_\alpha}][\kappa_i]=\sum_{i=1}^{m}[\vecb{a}_{i,j_\alpha,k_\alpha}][\kappa_{\pi^{-1}(i)}]\\
+&=\sum_{i=1}^{m}[\vecb{a}_{i,j_\alpha,k_\alpha}][vk_{i,j_\alpha,k_\alpha}].
 \end{align*}
-Then $\kappa_1,\ldots,\kappa_m$ is a permutation of $vk_{1,j_\alpha,k_\alpha},\ldots,vk_{m,j_\alpha,k_\alpha}$ (the same defined by $\vecb{z}_1,\ldots,\vecb{z}_m$), unless $(\kappa_{\pi^{-1}(1)}-{vk_{1,j_\alpha,k_\alpha}),\ldots,\kappa_{\pi^{-1}(m)}-vk_{m,j_\alpha,k_\alpha})})^\top$ is in the kernel of $\matr{A}$. However, this is in general a hard problem and corresponds to the $\mathcal{Q}_m^\top\mbox{-}\kermdh$ assumption in the terminology of Morillo et al.~\cite{AC:MorRafVil16}.
+Then $\kappa_1,\ldots,\kappa_m$ is a permutation of $vk_{1,j_\alpha,k_\alpha},\ldots,vk_{m,j_\alpha,k_\alpha}$ (the same defined by $\vecb{z}_1,\ldots,\vecb{z}_m$), unless $(\kappa_{\pi^{-1}(1)}-{vk_{1,j_\alpha,k_\alpha}),\ldots,\kappa_{\pi^{-1}(m)}-vk_{m,j_\alpha,k_\alpha})})^\top$ is in the kernel of $\matr{A}$. However, this is in general a hard problem and in fact corresponds a to kernel matrix Diffie-Hellman assumption, in the terminology of Morillo et al.~\cite{AC:MorRafVil16}.
 For the distribution $\mathcal{Q}$ (defined later), Groth and Lu showed the hardness of this problem in the generic group model \cite{AC:GroLu07}.
 
 Finally, the prover  shows, using Chandran et al.'s set-membership proof, that $[vk_\alpha]\in\{[\kappa_1],\ldots,[\kappa_m]\}$ which implies that  $[vk_\alpha]=[vk_{i_\alpha,j_\alpha,k_\alpha}]$.
@@ -60,7 +62,7 @@ $$
 \Pr\left[
 \begin{array}{l}
 gk\gets\G_s(1^\lambda);\matr{A}\gets\mathcal{Q}_{m};[\matr{Z}]\gets\advA(gk,[\matr{A}]):\\
-\mathrm{(i)} \sum_{i\in[m]}[\vecb{z}_i]=\sum_{i\in[m]}[\vecb{a}_i], \mathrm{(ii)}\ \forall i\in[m]\ [z_{2,i}][1]=[z_{1,i}][z_{1,i}],\\
+\mathrm{(i)} \sum_{i=1}^{m}[\vecb{z}_i]=\sum_{i=1}^{m}[\vecb{a}_i], \mathrm{(ii)}\ \forall 1\leq i\leq m\ [z_{2,i}][1]=[z_{1,i}][z_{1,i}],\\
 \text{ and }\matr{Z}\text{ is not a permutation of the columns of }\matr{A}
 \end{array}
 \right],
